# python

./: .gitignore
flask_blog/: README.md  app.py  init_db.py  pyproject.toml
flask_blog/templates/: create.html  edit.html  index.html  post.html
